기능: prometheus basic_auth 샘플 추가
Metric 수집 endpoint 에 접근제한이 걸려있을 경우, basic_auth 필드에 정의된 계정정보를 이용해
로그인하여 접근하는 샘플을 추가함

--- a/prometheus-grafana/prometheus/prometheus.yml
+++ b/prometheus-grafana/prometheus/prometheus.yml
@@ -1,7 +1,10 @@
 scrape_configs:
   # JOB
-  - job_name: 'YOUR_JOB_NAME'
+  - job_name: 'job'
     metrics_path: '/actuator/prometheus'
     scrape_interval: 5s
     static_configs:
       - targets: ['YOUR_HOST_IP:YOUR_PORT']
+    basic_auth:
+      username: 'foobar'
+      password: 'foobar'
