기타: nginx proxy 설정 샘플 수정

--- a/nginx/data/nginx/proxy.conf
+++ b/nginx/data/nginx/proxy.conf
@@ -7,7 +7,7 @@ server {
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header Host $http_host;
       proxy_set_header X-NginX-Proxy true;
-      proxy_pass http://sample-server:8080;
+      proxy_pass http://YOUR_SERVER_IP:YOUR_SERVER_PORT;
       proxy_redirect off;
   }
 
