기능: nginx 디렉토리 구조 수정
* ./data/nginx 디렉토리를 ./data/conf.d 디렉토리로 수정
* ./data 디렉토리에 nginx.conf 설정 파일 추가

--- a/nginx/docker-compose.yaml
+++ b/nginx/docker-compose.yaml
@@ -8,11 +8,6 @@ services:
       - 80:80
       - 443:443
     volumes:
-      - ./data/nginx:/etc/nginx/conf.d
+      - ./data/conf.d:/etc/nginx/conf.d
       - ./data/log:/var/log/nginx
-  sample-server:
-    container_name: sample-server
-    image: sample-server
-    ports:
-      - 8080:8080
-
+      - ./data/nginx.conf:/etc/nginx/nginx.conf
