--- a/nginx/data/conf.d/proxy.conf
+++ b/nginx/data/conf.d/proxy.conf
@@ -7,7 +7,9 @@ server {
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header Host $http_host;
       proxy_set_header X-NginX-Proxy true;
-      proxy_pass http://YOUR_SERVER_IP:YOUR_SERVER_PORT;
+      # MAC OS 에서는 아래와 같이 설정해도 됨.
+      # LINUX 에서는 --net:host 옵션 사용하기
+      proxy_pass http://host.docker.internal:8080;
       proxy_redirect off;
   }
 
