기타: 주석 수정

--- a/nginx/data/nginx.conf
+++ b/nginx/data/nginx.conf
@@ -12,6 +12,7 @@ http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
 
+    # Cloudflare 등에서 forwarded 되는 상황을 가정하여 x-forwarded-for을 맨 앞에 둠
     log_format main '$http_x_forwarded_for - $remote_user [$time_local] '
                     '"$request" $status $body_bytes_sent "$http_referer" '
                     '"$http_user_agent"'
