--- a/nginx/docker-compose.yaml
+++ b/nginx/docker-compose.yaml
@@ -1,13 +1,15 @@
-version: '3.2'
+version: '3.8'
 
 services:
   nginx:
     container_name: nginx
-    image: nginx:1.16-alpine
+    image: nginx:latest
     ports:
       - 80:80
       - 443:443
+      - 3000:3000
+      - 30000:30000
     volumes:
-      - ./data/conf.d:/etc/nginx/conf.d
-      - ./data/log:/var/log/nginx
-      - ./data/nginx.conf:/etc/nginx/nginx.conf
+      - ./conf.d:/etc/nginx/conf.d
+      - ./log:/var/log/nginx
+      - ./nginx.conf:/etc/nginx/nginx.conf
